cka/manifests/80-random-examples/networkpolicies/default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: test-1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
